feat: add two sections

--- a/index.html
+++ b/index.html
@@ -1,55 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css" type="text/css">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
+
 <body>
   <header class="header-main flex">
-      <nav class="flex">
+    <nav class="flex">
       <img src="images/logo.svg" alt="" class="logo">
-        <ul class="flex">
-          <!-- <li>About</li>
+      <ul class="flex">
+        <!-- <li>About</li>
           <li>Services</li>
           <li>Projects</li>
           <li>Contact</li> -->
-        </ul>
-      </nav>
-      <h1 class="fs-900 ff-serif uppercase text-white">We are creatives</h1>
+      </ul>
+    </nav>
+    <h1 class="ff-serif uppercase">We are creatives</h1>
   </header>
-  
-  
-  
-  
+  <main>
+    <section class="grid features-section">
+      <img src="images/desktop/image-transform.jpg" alt="" class="features-section_image-transform">
+      <article class="features-section_article">
+        <h2 class="ff-serif">Transform your brand</h2>
+        <p class="ff-sans">We are a full-service creative agency specializing in helping brands grow fast.
+          Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <a href="" class="uppercase ff-serif">Learn more</a>
+      </article>
+      <img src="images/desktop/image-stand-out.jpg" alt="" class="features-section_image-standout">
+      <article class="features-section_article">
+        <h2 class="ff-serif">Stand out to the right audience</h2>
+        <p class="ff-sans"> Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+        </p>
+        <a href="" class="uppercase ff-serif">Learn more</a>
+      </article>
+    </section>
+    <section class="services-section">
+      <article class="services-section_article">
+        <h2 class="ff-serif">Graphic design</h2>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      </article>
+      <article class="services-section_article">
+        <h2 class="ff-serif">Photography</h2>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </article>
+    </section>
+    <section class="clients-section">
+      <h2>Client testimonials</h2>
+      <article>
+        <img src="" alt="">
+        <p></p>
+        <p></p>
+        <p></p>
+      </article>
+      <article>
+        <img src="" alt="">
+        <p></p>
+        <p></p>
+        <p></p>
+      </article>
+      <article>
+        <img src="" alt="">
+        <p></p>
+        <p></p>
+        <p></p>
+      </article>
+    </section>
+  </main>
 
-  <!-- We are creatives
 
-  Transform your brand
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
 
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
+  <!-- 
+   Client testimonials
 
   We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
   Emily R.
@@ -70,4 +101,5 @@
 
 
 </body>
+
 </html>
