--- a/index.html
+++ b/index.html
@@ -110,17 +110,24 @@
       </picture>
     </section>
   </main>
-
-
-
-
-  <!-- 
-  About
-  Services
-  Projects
-  Contact -->
-
-
+  <footer class="footer-main flex">
+    <img src="images/logo.svg" alt="" class="logo">
+    <nav>
+      <ul class="secondary-navigation flex">
+        <li><a href="">About</a></li>
+        <li><a href="">Services</a></li>
+        <li><a href="">Projects</a></li>
+      </ul>
+    </nav>
+    <nav>
+      <ul class="social-links flex">
+        <li><a href=""><img src="images/icon-facebook.svg" alt=""></a></li>
+        <li><a href=""><img src="images/icon-instagram.svg" alt=""></a></li>
+        <li><a href=""><img src="images/icon-twitter.svg" alt=""></a></li>
+        <li><a href=""><img src="images/icon-pinterest.svg" alt=""></a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 
 </html>
