--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="images/desktop/image-transform.jpg" alt="">
       </picture>
       <article class="features-section_article">
-        <h2 class="ff-serif">Transform your brand</h2>
+        <h2 class="ff-serif">Transform your<br>brand</h2>
         <p class="ff-sans">We are a full-service creative agency specializing in helping brands grow fast.
           Engage your clients through compelling visuals that do most of the marketing for you.</p>
         <a href="" class="uppercase ff-serif">Learn more</a>
