fix: links description

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
     </nav>
     <nav>
       <ul class="social-links flex">
-        <li><a href=""><img src="images/icon-facebook.svg" alt=""></a></li>
-        <li><a href=""><img src="images/icon-instagram.svg" alt=""></a></li>
-        <li><a href=""><img src="images/icon-twitter.svg" alt=""></a></li>
-        <li><a href=""><img src="images/icon-pinterest.svg" alt=""></a></li>
+        <li><a href=""><img src="images/icon-facebook.svg" alt=""><p class="sr-only">Facebook</p></a></li>
+        <li><a href=""><img src="images/icon-instagram.svg" alt=""><p class="sr-only">Instagram</p></a></li>
+        <li><a href=""><img src="images/icon-twitter.svg" alt=""><p class="sr-only">Twitter</p></a></li>
+        <li><a href=""><img src="images/icon-pinterest.svg" alt=""><p class="sr-only">Pinterest</p></a></li>
       </ul>
     </nav>
   </footer>
